--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "ff14dmg",
-    "version": "0.0.0",
-    "description": "",
+    "name": "@piigo/xivapi",
+    "version": "0.0.1",
+    "description": "Object-oriented XIVAPI.com Client written in Typescript",
     "main": "src/index.js",
     "scripts": {},
     "repository": {},
@@ -9,12 +9,11 @@
     "author": "Julien Lavocat",
     "license": "ISC",
     "dependencies": {
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
         "node-fetch": "^2.6.0"
     },
     "devDependencies": {
         "@types/node": "^13.13.1",
-        "@types/node-fetch": "^2.5.6"
+        "@types/node-fetch": "^2.5.6",
+        "dotenv": "^8.2.0"
     }
 }
