Added linting, fixed errors

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.0.1",
     "description": "Object-oriented XIVAPI.com Client written in Typescript",
     "main": "src/index.js",
-    "scripts": {},
+    "scripts": {
+        "build": "tsc"
+    },
     "repository": {},
     "keywords": [],
     "author": "Julien Lavocat",
@@ -14,6 +16,9 @@
     "devDependencies": {
         "@types/node": "^13.13.1",
         "@types/node-fetch": "^2.5.6",
-        "dotenv": "^8.2.0"
+        "dotenv": "^8.2.0",
+        "tslint": "^6.1.1",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^3.8.3"
     }
 }
