--- a/package.json
+++ b/package.json
@@ -2,12 +2,27 @@
     "name": "@piigo/xivapi",
     "version": "0.0.1",
     "description": "Object-oriented XIVAPI.com Client written in Typescript",
-    "main": "src/index.js",
+    "main": "dist/index.js",
+    "type": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc"
+        "test": "echo ",
+        "build": "tsc",
+        "lint": "tslint -p tsconfig.json",
+        "prepare": "npm run build",
+        "prepublishOnly": "npm test && npm run lint",
+        "preversion" : "npm run lint",
+        "postversion" : "git push && git push --tags"
     },
     "repository": {},
-    "keywords": [],
+    "keywords": [
+        "ff14",
+        "xivapi",
+        "final fantasy 14",
+        "final fantasy",
+        "final",
+        "fantasy",
+        "14"
+    ],
     "author": "Julien Lavocat",
     "license": "ISC",
     "dependencies": {
